@@ -6,6 +6,8 @@ new features
   - udg(): utility function to extract properly parsed udg stats
     e.g., the M quality statitistics of X-11
 
+under the hood
+  - on windows, use / instead of \\, to be consitent with file.path()
 
 
 1.2.1  2016-02-11
